--- a/app/src/main/res/layout/fragment_admin_manage_emergency_complaint.xml
+++ b/app/src/main/res/layout/fragment_admin_manage_emergency_complaint.xml
@@ -119,13 +119,15 @@
 
         <Button
             android:id="@+id/btnSubmit"
+            style="@style/Widget.Material3.Button"
+            android:backgroundTint="@color/mycolor2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:text="Submit"
-            android:textAllCaps="false"
-            android:textSize="30sp" />
+            android:layout_marginTop="30dp"
+            android:text="Update"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </ScrollView>
