--- a/app/src/main/res/layout/fragment_create_emergency_complaint.xml
+++ b/app/src/main/res/layout/fragment_create_emergency_complaint.xml
@@ -83,13 +83,15 @@
         </com.google.android.material.card.MaterialCardView>
         <Button
             android:id="@+id/btnSubmit"
-            android:layout_margin="10dp"
+            style="@style/Widget.Material3.Button"
+            android:backgroundTint="@color/mycolor2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAllCaps="false"
-            android:layout_gravity="center"
-            android:textSize="30sp"
-            android:text="Submit"/>
+            android:layout_marginTop="30dp"
+            android:text="create"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </ScrollView>
