--- a/app/src/main/res/menu/admin_app_menu.xml
+++ b/app/src/main/res/menu/admin_app_menu.xml
@@ -7,9 +7,13 @@
         android:checkableBehavior="single">
 
         <item
-            android:id="@+id/homeFragment"
+            android:id="@+id/mainFragment"
             android:icon="@drawable/baseline_home_24"
             android:title="Home"/>
+        <item
+            android:id="@+id/allUserFragment"
+            android:icon="@drawable/baseline_person_24"
+            android:title="Users"/>
         <item
             android:id="@+id/allEmergencyComplaintFragment"
             android:icon="@drawable/baseline_contact_emergency_24"
